# langcheck_cli

./: LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  tweet.txt
example/: ai_disclaimer.txt  sentiment.txt  toxicity.txt
src/langcheck_cli/: __init__.py  router.py
src/langcheck_cli/controller/: argument.py  check_metrics.py  controller.py  help_message.py  metrics.py
src/langcheck_cli/service/: ai_disclaimer_similarity_calculator.py  fluency_calculator.py  get_lines_from_text_file.py  sentiment_calculator.py  toxicity_calculator.py
src/tests/: test_router.py
src/tests/controller/: test_metrics.py
src/tests/service/: test_ai_disclaimer_similarity_calculator.py  test_sentiment.py  test_toxicity.py
